# specification/impact/resource-manager/Microsoft.Impact/preview/2022-10-20-preview/openapi.json
@@ -793,12 +793,14 @@
           "format": "date-time",
           "description": "The time the impact was reported"
         },
-        "startDateTimeUtc": {
+        "startDateTime": {
+
           "type": "string",
           "format": "date-time",
           "description": "The start time of the impact"
         },
-        "endDateTimeUtc": {
+        "endDateTime": {
+
           "type": "string",
           "format": "date-time",
           "description": "The end time of the impact"
@@ -817,7 +819,7 @@
       "required": [
         "impactUniqueId",
         "reportedTimeUtc",
-        "startDateTimeUtc",
+        "startDateTime",
         "impactCategory"
       ]
     },
